// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly with both arrows 1`] = `
<div
  className="followup-timeline-box collapsed"
  id="contribution-1"
>
  <ArrowButton
    direction="left"
    disabled={false}
    label="1"
    onTouchTap={[Function]}
  />
  <div>
    Element
  </div>
  <ArrowButton
    direction="right"
    disabled={false}
    label="1"
    onTouchTap={[Function]}
  />
  <RaisedButton
    disabled={false}
    id="contribution-1-button"
    label="Show more"
    onTouchTap={[Function]}
  />
</div>
`;

exports[`rendering renders correctly with left arrow 1`] = `
<div
  className="followup-timeline-box collapsed"
  id="contribution-1"
>
  <ArrowButton
    direction="left"
    disabled={false}
    label="1"
    onTouchTap={[Function]}
  />
  <div>
    Element
  </div>
  <RaisedButton
    disabled={false}
    id="contribution-1-button"
    label="Show more"
    onTouchTap={[Function]}
  />
</div>
`;

exports[`rendering renders correctly with right arrow 1`] = `
<div
  className="followup-timeline-box collapsed"
  id="contribution-1"
>
  <div>
    Element
  </div>
  <ArrowButton
    direction="right"
    disabled={false}
    label="1"
    onTouchTap={[Function]}
  />
  <RaisedButton
    disabled={false}
    id="contribution-1-button"
    label="Show more"
    onTouchTap={[Function]}
  />
</div>
`;

exports[`rendering renders correctly without arrows 1`] = `
<div
  className="followup-timeline-box collapsed"
  id="contribution-1"
>
  <div>
    Element
  </div>
  <RaisedButton
    disabled={false}
    id="contribution-1-button"
    label="Show more"
    onTouchTap={[Function]}
  />
</div>
`;
